--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,6 +251,12 @@ ul {
   display: none;
 }
 
+@media only screen and (max-width: 1200px) {
+  nav ul li a {
+  font-size: 11px
+}
+}
+
 @media only screen and (max-width: 600px) {
   .hero,
   .pick-your-style {
