--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,11 @@
       action="{{url_for('filtered_index')}}"
       method="POST"
       class="col s12"
-      id="add-event"
-      enctype="multipart/form-data"
     >
       <div class="row">
         <div class="input-field col s12">
           <select name="country" id="country">
-            <option disabled selected>Please select a country</option>
+            <option selected>Please select a country</option>
             {% for country in countries %}
             <option value="{{country.country_name}}"
               >{{country.country_name}}</option
