--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+<h1 class="center">Find events in your country:</h1>
 <div class="container">
   <form
     action="{{url_for('filtered_salsa')}}"
@@ -8,9 +9,9 @@
     enctype="multipart/form-data"
   >
     <div class="row">
-      <div class="input-field col s12 m6">
+      <div class="input-field col s12">
         <select name="country" id="country">
-          <option disabled selected>Please select a country</option>
+          <option selected>Please select a country</option>
           {% for country in countries %}
           <option value="{{country.country_name}}"
             >{{country.country_name}}</option
@@ -19,13 +20,15 @@
         </select>
         <label>Country</label>
       </div>
-      <button
-        class="btn waves-effect waves-light purple darken-3"
-        type="submit"
-      >
-        Search
-        <i class="material-icons right">search</i>
-      </button>
+      <div class="col s12 center">
+          <button
+            class="center btn waves-effect waves-light purple darken-3"
+            type="submit"
+          >
+            Search
+            <i class="material-icons right">search</i>
+          </button>
+        </div>
     </div>
   </form>
   <h1 class="center">{{country}}</h1>
