--- a/templates/base.html
+++ b/templates/base.html
@@ -151,10 +151,10 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Contact Us</h5>
+            <h4 class="white-text center">Contact Us</h4>
             <form onsubmit="return sendMail(this);" class="contact-form">
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                   <input
                     id="subject"
                     name="subject"
@@ -164,7 +164,7 @@
                   />
                   <label class="active" for="subject">Subject</label>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                   <input
                     id="name"
                     name="name"
@@ -174,7 +174,7 @@
                   />
                   <label class="active" for="name">Your Name</label>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                   <input
                     id="email"
                     name="email"
@@ -184,7 +184,7 @@
                   />
                   <label class="active" for="email">Email Address</label>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                   <input
                     id="number"
                     name="number"
@@ -192,7 +192,7 @@
                     class="validate"
                   />
                   <label class="active" for="number"
-                    >Mobile Number (optional)</label
+                    >Mobile Number</label
                   >
                 </div>
                 <div class="input-field col s12">
@@ -217,7 +217,7 @@
             </form>
           </div>
           <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Social Media</h5>
+            <h4 class="white-text center">Social Media</h4>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
               <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
