--- a/templates/organiser.html
+++ b/templates/organiser.html
@@ -47,7 +47,7 @@
               {% else %} {% endif %}
             </ul>
             <a class="btn-floating halfway-fab waves-effect waves-light red"
-              ><i class="material-icons right">add</i></a
+              ><i class="material-icons right">info</i></a
             ></span
           >
           <p>
