--- a/templates/bachata.html
+++ b/templates/bachata.html
@@ -5,8 +5,6 @@
     action="{{url_for('filtered_bachata')}}"
     method="POST"
     class="col s12"
-    id="add-event"
-    enctype="multipart/form-data"
   >
     <div class="row">
       <div class="input-field col s12">
@@ -34,7 +32,7 @@
   <h1 class="center">{{country}}</h1>
   <div class="row">
     {% for event in events%} {% if event.bachata == 'on' %}
-    <div class="col s6 m6 l6 xl4">
+    <div class="col s12 m6 l6 xl4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img
@@ -62,7 +60,7 @@
               {% else %} {% endif %}
             </ul>
             <a class="btn-floating halfway-fab waves-effect waves-light red"
-              ><i class="material-icons right">add</i></a
+              ><i class="material-icons right">info</i></a
             ></span
           >
           <p>
