--- a/templates/kizomba.html
+++ b/templates/kizomba.html
@@ -5,8 +5,6 @@
     action="{{url_for('filtered_kizomba')}}"
     method="POST"
     class="col s12"
-    id="add-event"
-    enctype="multipart/form-data"
   >
     <div class="row">
       <div class="input-field col s12">
@@ -62,7 +60,7 @@
               {% else %} {% endif %}
             </ul>
             <a class="btn-floating halfway-fab waves-effect waves-light red"
-              ><i class="material-icons right">add</i></a
+              ><i class="material-icons right">info</i></a
             ></span
           >
           <p>
