mobile responsiveness of buttons in event pages. Mobile responsive organiser username in all-organisers.html

--- a/templates/kizomba.html
+++ b/templates/kizomba.html
@@ -116,15 +116,15 @@
   </div>
 </div>
 <div class="row container center">
-  <h5>Other Styles:</h5>
-  <div class="col s6">
+  <h4>Other Styles:</h4>
+  <div class="col s12 m6">
     <a
       href="{{url_for('get_salsa_events')}}"
       class="btn-large waves-effect waves-light waves-ripple purple darken-3"
       >Salsa Events</a
     >
   </div>
-  <div class="col s6">
+  <div class="col s12 m6">
     <a
       href="{{url_for('get_bachata_events')}}"
       class="btn-large waves-effect waves-light waves-ripple purple darken-3"
