--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -116,15 +116,15 @@
   </div>
 </div>
 <div class="row container center">
-  <h5>Other Styles:</h5>
-  <div class="col s6">
+  <h4>Other Styles:</h4>
+  <div class="col s12 m6">
     <a
       href="{{url_for('get_bachata_events')}}"
       class="btn-large waves-effect waves-light waves-ripple purple darken-3"
       >Bachata</a
     >
   </div>
-  <div class="col s6">
+  <div class="col s12 m6">
     <a
       href="{{url_for('get_kizomba_events')}}"
       class="btn-large waves-effect waves-light waves-ripple purple darken-3 center"
