Added line to delete_profile function to remove events for the user. Fixed terms and conditions checkbox to now show required validation when not checked. Fixed typos on the account page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,6 +88,11 @@ ul {
   background-color: #6a1b9a;
 }
 
+#tc {
+  opacity: 100% !important;
+  position: relative
+}
+
 /* Alert */
 
 .alert-error {
