--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,47 +1,91 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row center container">
-	<div class="col s12 m6">
-		<h3>Sign Up</h3>
-		<form action="{{url_for('adduser')}}" method="POST" class="col s12" id="signup">
-			<div class="row">
-				<div class="input-field col s12">
-					<input id="email" name="email" type="email" class="validate" required/>
-					<label class="active" for="email">Email</label>
-				</div>
-				<div class="input-field col s12">
-					<input id="username" name="username" type="text" class="validate" required/>
-					<label class="active" for="username">Username</label>
-				</div>
-				<div class="input-field col s12">
-					<input id="password" name="password" type="password" class="validate" required/>
-					<label class="active" for="password">Password</label>
-				</div>
-			</div>
-      <div class="col s4 switch">
-					<label>
-          <input type="checkbox" name="t&c" id="t&c" required/>
-          <span class="lever"></span>
-          I have read and understand the <a href="{{url_for('terms')}}" target="_blank">terms and conditions</a>
-        </label>
-				</div>
-			<button class="btn waves-effect waves-light" type="submit">Sign Up<i class="material-icons right">playlist_add</i></button>
-		</form>
-	</div>
-	<div class="col s12 m6">
-		<h3>Log In</h3>
-		<form action="{{url_for('login')}}" method="POST" class="col s12" id="login">
-			<div class="row">
-				<div class="input-field col s12">
-					<input id="login_username" name="login_username" type="text" class="validate" required/>
-					<label class="active" for="login_username">Username</label>
-				</div>
-				<div class="input-field col s12">
-					<input id="login_password" name="login_password" type="password" class="validate" required/>
-					<label class="active" for="login_password">Password</label>
-				</div>
-			</div>
-			<button class="btn waves-effect waves-light" type="submit">Login<i class="material-icons right">arrow_right</i></button>
-		</form>
-	</div>
+  <div class="col s12 m6">
+    <h3>Sign Up</h3>
+    <form
+      action="{{url_for('adduser')}}"
+      method="POST"
+      class="col s12"
+      id="signup"
+    >
+      <div class="row">
+        <div class="input-field col s12">
+          <input
+            id="email"
+            name="email"
+            type="email"
+            class="validate"
+            required
+          />
+          <label class="active" for="email">Email</label>
+        </div>
+        <div class="input-field col s12">
+          <input
+            id="username"
+            name="username"
+            type="text"
+            class="validate"
+            required
+          />
+          <label class="active" for="username">Username</label>
+        </div>
+        <div class="input-field col s12">
+          <input
+            id="password"
+            name="password"
+            type="password"
+            class="validate"
+            required
+          />
+          <label class="active" for="password">Password</label>
+        </div>
+      </div>
+      <div class="col s4">
+        <input type="checkbox" name="t&c" id="tc" required />
+        <span class="lever"></span>
+        <br>
+        I have read and understand the
+        <a href="{{url_for('terms')}}" target="_blank">terms and conditions</a>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit">
+        Sign Up<i class="material-icons right">playlist_add</i>
+      </button>
+    </form>
+  </div>
+  <div class="col s12 m6">
+    <h3>Log In</h3>
+    <form
+      action="{{url_for('login')}}"
+      method="POST"
+      class="col s12"
+      id="login"
+    >
+      <div class="row">
+        <div class="input-field col s12">
+          <input
+            id="login_username"
+            name="login_username"
+            type="text"
+            class="validate"
+            required
+          />
+          <label class="active" for="login_username">Username</label>
+        </div>
+        <div class="input-field col s12">
+          <input
+            id="login_password"
+            name="login_password"
+            type="password"
+            class="validate"
+            required
+          />
+          <label class="active" for="login_password">Password</label>
+        </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit">
+        Login<i class="material-icons right">arrow_right</i>
+      </button>
+    </form>
+  </div>
 </div>
 {% endblock %}
