--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
         {% endif %}
       </ul>
     </header>
-
+<div class="nav-space"></div>
     {% for message in get_flashed_messages() %}
     <div class="alert-error center container">{{ message }}</div>
     {% endfor %} {% block content %} {% endblock %}
