Modal functionality for terms and conditions added, rendering terms.html unnecessary and thus deleted. Placeholder terms and conditions added

--- a/templates/base.html
+++ b/templates/base.html
@@ -240,6 +240,7 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $(".sidenav").sidenav();
+        $('.modal').modal();
         $(".scrollspy").scrollSpy();
         $("select").formSelect();
         $(".collapsible").collapsible();
