--- a/templates/signup.html
+++ b/templates/signup.html
@@ -55,10 +55,7 @@
 
 						<p>These Terms will be applied fully and affect to your use of this Website. By using this
 							Website, you agreed to accept all terms and conditions written in here. You must not use
-							this Website if you disagree with any of these Website Standard Terms and Conditions. These
-							Terms and Conditions have been generated with the help of the <a
-								href="https://www.termsandcondiitionssample.com">Terms And Conditions Template</a> and
-							the <a href="https://www.terms-conditions-generator.com">Terms and Conditions Generator</a>.
+							this Website if you disagree with any of these Website Standard Terms and Conditions.
 						</p>
 
 						<p>Minors or people below 18 years old are not allowed to use this Website.</p>
