number input type for mobile added. Redirect login to account on successful login

--- a/templates/account.html
+++ b/templates/account.html
@@ -89,7 +89,7 @@
                 value="{{ user.mobile }}"
                 id="mobile"
                 name="mobile"
-                type="text"
+                type="number"
                 class="validate"
               />
             </div>
