--- a/templates/organiser.html
+++ b/templates/organiser.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container">
+<div class="container break">
 	<img
     class="activator profile-image"
     src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/{{organiser.event_image}}"
