--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="hero">
 	<div class="hero-content center white-text">
-		<h1 class="hero-title">Dance Your Way</h1>
+		<p class="hero-title">Dance Your Way</p>
 		<div class="row center container">
 			<div class="col s12 m6">
 				<a href="{{url_for('add_event')}}"
