--- a/templates/account.html
+++ b/templates/account.html
@@ -184,7 +184,7 @@
                 />
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">
+                <div class="card-title activator grey-text text-darken-4">
                   <h5>{{event.event_name}}</h5>
                   <h5>{{event.city}}, {{event.country}}</h5>
                   <strong>{{event.weekday}}:</strong> {{event.time}}
@@ -204,7 +204,7 @@
                   <a
                     class="btn-floating halfway-fab waves-effect waves-light red"
                     ><i class="material-icons right">info</i></a
-                  ></span
+                  ></div
                 >
                 <p>
                   <a href="{{event.event_link}}" target="_blank">See event</a>
