--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -38,7 +38,7 @@
           />
         </div>
 					<div class="card-content">
-						<span class="card-title activator grey-text text-darken-4">
+						<div class="card-title activator grey-text text-darken-4">
             <h5>{{event.event_name}}</h5>
             <h5>{{event.city}}, {{event.country}}</h5>
             <h5>{{event.weekday}}:</h5> {{event.time}}
@@ -54,7 +54,7 @@
 						<span>Kizomba </span>
 						{% else %} {% endif %}
 						<a
-							class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons right">info</i></a></span>
+							class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons right">info</i></a></div>
 						<p>
 							<a href="{{event.event_link}}" target="_blank">See event</a>
 						</p>
