Added maps to event style pages. Included zoom variables dependant on selected country. Fixed map popup image sizes.

--- a/templates/add-event.html
+++ b/templates/add-event.html
@@ -59,8 +59,8 @@
           <select name="country" id="country">
             <option disabled selected value="">Please select a country</option>
             {% for country in countries %}
-            <option value="{{country.country_name}}"
-              >{{country.country_name}}</option
+            <option value="{{country.country}}"
+              >{{country.country}}</option
             >
             {% endfor %}
           </select>
