--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,19 +226,16 @@ nav {
   height: 200px;
 }
 
-.card-image img,
-.smallcard-image {
+.card-image img {
   height: 100%;
   width: auto;
   object-fit: cover;
 }
 
-.smallcard-image {
-  height: 175px;
-}
-
 .smallcard-image img {
-  width: 100%;
+  object-fit: contain;
+  height: 175px;
+  width: 100%
 }
 
 .card-content {
