--- a/templates/account.html
+++ b/templates/account.html
@@ -54,8 +54,8 @@
                     >{{user.country}}</option
                   >
                   {% for country in countries %}
-                  <option value="{{country.country_name}}"
-                    >{{country.country_name}}</option
+                  <option value="{{country.country}}"
+                    >{{country.country}}</option
                   >
                   {% endfor %}
                 </select>
