--- a/templates/edit-event.html
+++ b/templates/edit-event.html
@@ -63,8 +63,8 @@
           <select name="country" id="country">
             <option value="{{event.country}}">{{event.country}}</option>
             {% for country in countries %}
-            <option value="{{country.country_name}}"
-              >{{country.country_name}}</option
+            <option value="{{country.country}}"
+              >{{country.country}}</option
             >
             {% endfor %}
           </select>
