Mobile responsive account photo update

--- a/templates/account.html
+++ b/templates/account.html
@@ -114,7 +114,7 @@
           </div>
           <div class="file-field input-field">
             <div class="btn purple darken-3">
-              <span>Update Profile Picture</span>
+              Update Picture
               <input type="file" name="event_image_s3" id="event_image_s3" />
             </div>
             <div class="file-path-wrapper">
